--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
     <nav>
       <img class="logo" src="/src/images/logo.jpg">
       <div class="nav-links">
-        <a href="#">our story</a>
-        <a href="#">our ice cream</a>
-        <a href="#">contact us</a>
+        <a href="#">meet wing</a>
+        <a href="#">ice cream</a>
+        <a href="#">contact</a>
       </div>
     </nav>
 
