--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Wing Ice Cream</title>
+    <title>WING / ICE / CREAM</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -11,15 +11,23 @@
     <nav>
       <img class="logo" src="/src/images/logo.jpg">
       <div class="nav-links">
-        <a href="#">meet wing</a>
-        <a href="#">ice cream</a>
-        <a href="#">contact</a>
+        <a href="#about">meet wing</a>
+        <a href="#icecream">ice cream</a>
+        <a href="#contact">contact</a>
       </div>
     </nav>
 
-    <main>
-      <img src="/src/images/wing1.jpg">
-      <img src="/src/images/wing2.jpg">
+    <main id="main">
+      <div class="section" id="about">
+        <img src="/src/images/wing2.jpg">
+      </div>
+
+      <div class="section" id="icecream">
+        <img src="/src/images/wing1.jpg">
+      </div>
+
+      <div class="section" id="contact">
+      </div>
     </main>
 
     <script src="script.js"></script>
