--- a/src/index.html
+++ b/src/index.html
@@ -8,28 +8,34 @@
   </head>
 
   <body>
-    <nav>
+    <nav class="nav">
       <img class="logo" src="/src/images/logo.jpg">
       <div class="nav-links">
-        <a href="#about">meet wing</a>
-        <a href="#icecream">ice cream</a>
-        <a href="#contact">contact</a>
+        <ul>
+          <li class="active"><a id="link1" class="nav-section1" href="#about">meet wing</a></li>
+          <li><a id="link2" class="nav-section2" href="#icecream">ice cream</a></li>
+          <li><a id="link3" class="nav-section3" href="#contact">contact</a></li>
+        </ul>
       </div>
     </nav>
 
-    <main id="main">
-      <div class="section" id="about">
+    <main>
+      <article>
+        <h2 id="about"></h2>
         <img src="/src/images/wing2.jpg">
-      </div>
+      </article>
 
-      <div class="section" id="icecream">
+      <article>
+        <h2 id="icecream"></h2>
         <img src="/src/images/wing1.jpg">
-      </div>
+      </article>
 
-      <div class="section" id="contact">
-      </div>
+      <article>
+        <h2 id="contact"></h2>
+      </article>
     </main>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
