--- a/src/index.html
+++ b/src/index.html
@@ -9,29 +9,30 @@
 
   <body>
     <nav class="nav">
-      <img class="logo" src="/src/images/logo.jpg">
+      <a href="#top"><img class="logo" src="/src/images/logo.jpg"></a>
       <div class="nav-links">
         <ul>
-          <li class="active"><a id="link1" class="nav-section1" href="#about">meet wing</a></li>
-          <li><a id="link2" class="nav-section2" href="#icecream">ice cream</a></li>
+          <li><a id="link1" class="nav-section1" href="#icecream">ice cream</a></li>
+          <li><a id="link2" class="nav-section2" href="#meetwing">meet wing</a></li>
           <li><a id="link3" class="nav-section3" href="#contact">contact</a></li>
         </ul>
       </div>
     </nav>
 
     <main>
-      <article>
-        <h2 id="about"></h2>
+      <article id="top">
+        <img src="/src/images/shop.jpg">
+        <h2>not your average ice cream joint.</h2>
+      </article>
+      <article id="icecream">
         <img src="/src/images/wing2.jpg">
       </article>
 
-      <article>
-        <h2 id="icecream"></h2>
+      <article id="meetwing">
         <img src="/src/images/wing1.jpg">
       </article>
 
-      <article>
-        <h2 id="contact"></h2>
+      <article id="contact">
       </article>
     </main>
 
