--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>WING / ICE / CREAM</title>
+    <title>// WING ICE CREAM //</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -25,7 +25,8 @@
         <h2>not your average ice cream joint.</h2>
       </article>
       <article id="icecream">
-        <img src="/src/images/wing2.jpg">
+        <a class="section-hover" href="icecream.html"><h2>get the scoop</h2>
+          </a>
       </article>
 
       <article id="meetwing">
