--- a/src/icecream.html
+++ b/src/icecream.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>// WING ICE CREAM //</title>
+    <title>+ WING ICE CREAM +</title>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick-theme.css"/>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -11,16 +14,29 @@
     </nav>
 
     <main>
-      <div class="scoops">
-        <img src="/src/images/scoop1.jpg">
-        <img src="/src/images/scoop2.jpg">
-        <img src="/src/images/scoop3.jpg">
-        <img src="/src/images/scoop4.jpg">
+      <div class="menu">
+        <div class="menu-image">
+          <img src="/src/images/icecream2.jpg">
+        </div>
+        <div class="menu-text">
+          <h2>our ice cream</h2>
+          <p>We offer a wide range of homemade, handmade flavors. Past specials include goober grape, avocado, ume shiso, and honey lavender. Our flavors change regularly on the season- every visit to us is a unique adventure. We play vinyl records all day and keep the lights on late into the night. Enter with an open mind, and you will leave with a smile.</p>
+        </br>
+          <p>We also offer non-dairy and vegan ice cream.</p>
+        </div>
       </div>
+      <div class="scoops">
+        <div class="singlescoop"><img src="/src/images/scoop1.jpg"><div class="overlay"><h3>li hing raspberry</h3></div></div>
+        <div class="singlescoop"><img src="/src/images/scoop2.jpg"><div class="overlay"><h3>key lime pie</h3></div></div>
+        <div class="singlescoop"><img src="/src/images/scoop3.jpg"><div class="overlay"><h3>ube</h3></div></div>
+        <div class="singlescoop"><img src="/src/images/scoop4.jpg"><div class="overlay"><h3>cayenne chocolate</h3></div></div>
+      </div>
+      <div class="back-button"><a href="index.html">back to home</a></div>
     </main>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="slick.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+      <script type="text/javascript" src="slick.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
