--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>// WING ICE CREAM //</title>
+    <title>+ WING ICE CREAM +</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -14,15 +14,15 @@
         <ul>
           <li><a id="link1" class="nav-section1" href="#icecream">ice cream</a></li>
           <li><a id="link2" class="nav-section2" href="#meetwing">meet wing</a></li>
-          <li><a id="link3" class="nav-section3" href="#contact">contact</a></li>
+          <li><a id="link3" class="nav-section3" href="#contact">find us</a></li>
         </ul>
       </div>
     </nav>
 
     <main>
       <article id="top">
-        <img src="/src/images/shop.jpg">
-        <h2>not your average ice cream joint.</h2>
+        <img src="/src/images/wing2.jpg">
+        <h2>not your mama's ice cream joint.</h2>
       </article>
       <article id="icecream">
         <a class="section-hover" href="icecream.html"><h2>get the scoop</h2>
@@ -30,14 +30,48 @@
       </article>
 
       <article id="meetwing">
-        <img src="/src/images/wing1.jpg">
+        <a href="meetwing.html"><img src="/src/images/wing1.jpg">
+          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+  	       viewBox="0 0 259 204" style="enable-background:new 0 0 259 204;" xml:space="preserve">
+        <style type="text/css">
+        	.st0{fill:#0000FF;}
+        	.st1{fill:none;}
+        	.st2{font-family:'Menlo-Regular';}
+        	.st3{font-size:47px;}
+        </style>
+        <g>
+        	<g>
+        		<path class="path" stroke="#0000FF" stroke-width="3" fill="none" d="M66.7,95.5c-16.5,8.6-32.5,17.8-48.2,27.7c-2.1,1.3-1.2,4.6,1.3,4.7c9.4,0.3,18.9-0.3,28.2-1.8
+        			c4.8-0.8,9.7-1.8,14.4-3.1c2.2-0.6,5-1.9,7.3-1.9c3.1,0.1,5.6,2.7,7.9,4.4c15.2,11.6,31.6,21.8,48.9,29.9
+        			c17.7,8.4,35.1,11.2,54.3,6.2c9.3-2.4,18.3-6.2,27.1-10c9.1-4,18.4-7.9,27.3-12.5c7-3.7,10.8-9,12.4-16.7c1.9-9.3,2.4-19,2.4-28.5
+        			c-0.1-18.8-2.7-39.1-10.1-56.4c-7-16.4-22.9-20.8-39.2-23.2c-17.4-2.5-35.4-1.7-52.5,2.9C112.7,26.9,82.8,53.4,72,88.8
+        			c-0.9,3.1,3.9,4.4,4.8,1.3c9-29.6,32.5-53.3,61.2-64.3c15.8-6.1,33-8.5,49.9-7.7c15.7,0.8,37.7,2.8,45.9,18.4
+        			c4.1,7.7,6.1,16.8,7.8,25.3c1.9,9.1,2.9,18.3,3.2,27.6c0.3,9.1-0.2,18.2-1.4,27.1c-0.5,3.8-1,8-2.9,11.4
+        			c-2.3,4.2-6.4,6.2-10.6,8.2c-16.8,8.1-34.2,16.7-52.3,21.2c-9.2,2.2-18.6,3-27.9,1.1c-9-1.8-17.4-5.6-25.5-9.7
+        			c-8.8-4.4-17.4-9.3-25.7-14.7c-4-2.6-8-5.3-11.9-8.1c-3.7-2.7-7.3-6-11.2-8.3c-3-1.8-6.1-1.8-9.4-1c-5,1.2-9.8,2.7-14.9,3.7
+        			c-10.4,2-20.9,2.7-31.4,2.4c0.4,1.6,0.8,3.1,1.3,4.7c15.7-9.9,31.8-19.2,48.2-27.7C72,98.3,69.5,94,66.7,95.5L66.7,95.5z"/>
+        	</g>
+        </g>
+        <rect x="137.8" y="69.5" class="st1" width="137.4" height="52.7"/>
+        <text transform="matrix(1 0 0 1 137.8473 100.6716)" class="st0 st2 st3">hi</text>
+        </svg>
+      </a>
       </article>
 
       <article id="contact">
+        <p><a href="https://www.google.com/maps?q=wing+ice+cream&ion=1&espv=2&bav=on.2,or.r_cp.&bvm=bv.140496471,d.cGc&biw=1211&bih=650&dpr=2&um=1&ie=UTF-8&sa=X&ved=0ahUKEwjk_6Kji-HQAhUQxmMKHcIcA6AQ_AUIBigB" target="_blank">1145 Maunakea St.
+        Honolulu, HI 96817</a><br><br>
+        open 12-10pm daily</p>
+        <div class="social-icons">
+          <a href="https://www.yelp.com/biz/wing-shave-ice-and-ice-cream-honolulu" target="_blank"><i class="fa fa-yelp" aria-hidden="true"></i></a>
+          <a href="https://www.facebook.com/WingIceCreamParlor/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+          <a href="https://www.instagram.com/wingicecream/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        </div>
       </article>
     </main>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://use.fontawesome.com/a66e157a23.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
