--- a/icecream.html
+++ b/icecream.html
@@ -16,7 +16,7 @@
     <main>
       <div class="menu">
         <div class="menu-image">
-          <img src="/src/images/icecream2.jpg">
+          <img src="images/icecream2.jpg">
         </div>
         <div class="menu-text">
           <h2>our ice cream</h2>
@@ -26,10 +26,10 @@
         </div>
       </div>
       <div class="scoops">
-        <div class="singlescoop"><img src="/src/images/scoop1.jpg"><div class="overlay"><h3>li hing raspberry</h3></div></div>
-        <div class="singlescoop"><img src="/src/images/scoop2.jpg"><div class="overlay"><h3>key lime pie</h3></div></div>
-        <div class="singlescoop"><img src="/src/images/scoop3.jpg"><div class="overlay"><h3>ube</h3></div></div>
-        <div class="singlescoop"><img src="/src/images/scoop4.jpg"><div class="overlay"><h3>cayenne chocolate</h3></div></div>
+        <div class="singlescoop"><img src="images/scoop1.jpg"><div class="overlay"><h3>li hing raspberry</h3></div></div>
+        <div class="singlescoop"><img src="images/scoop2.jpg"><div class="overlay"><h3>key lime pie</h3></div></div>
+        <div class="singlescoop"><img src="images/scoop3.jpg"><div class="overlay"><h3>ube</h3></div></div>
+        <div class="singlescoop"><img src="images/scoop4.jpg"><div class="overlay"><h3>cayenne chocolate</h3></div></div>
       </div>
       <div class="back-button"><a href="index.html">back to home</a></div>
     </main>
