--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 
     <main>
       <article id="top">
-        <img src="/src/images/wing2.jpg">
+        <img src="images/wing2.jpg">
         <h2>not your mama's ice cream joint.</h2>
       </article>
       <article id="icecream">
@@ -30,7 +30,7 @@
       </article>
 
       <article id="meetwing">
-        <a href="meetwing.html"><img src="/src/images/wing1.jpg">
+        <a href="meetwing.html"><img src="images/wing1.jpg">
           <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
   	       viewBox="0 0 259 204" style="enable-background:new 0 0 259 204;" xml:space="preserve">
         <style type="text/css">
