--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <nav class="nav">
-      <a href="#top"><img class="logo" src="/src/images/logo.jpg"></a>
+      <a href="#top"><img class="logo" src="images/logo.jpg"></a>
       <div class="nav-links">
         <ul>
           <li><a id="link1" class="nav-section1" href="#icecream">ice cream</a></li>
