--- a/meetwing.html
+++ b/meetwing.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav class="nav">
-      <a href="index.html"><img class="logo" src="/src/images/logo.jpg"></a>
+      <a href="index.html"><img class="logo" src="images/logo.jpg"></a>
     </nav>
 
     <main>
@@ -20,11 +20,11 @@
           <p>What started out as a hobby of mine has turned into a full blown operation. My ice cream has been described as "hella good" and "some bomb ass ice cream". But don't take my word for it- come and try it for yourself.</p>
         </div>
         <div class="menu-image">
-          <img src="/src/images/wing.png">
+          <img src="images/wing.png">
         </div>
       </div>
       <div class="store">
-        <img src="/src/images/shop.jpg">
+        <img src="images/shop.jpg">
       </div>
       <div class="back-button"><a href="index.html">back to home</a></div>
     </main>
