--- a/src/icecream.html
+++ b/src/icecream.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav class="nav">
-      <a href="index.html"><img class="logo" src="/src/images/logo.jpg"></a>
+      <a href="index.html"><img class="logo" src="images/logo.jpg"></a>
     </nav>
 
     <main>
