add scroll trigger

--- a/meetwing.html
+++ b/meetwing.html
@@ -14,12 +14,12 @@
     </nav>
 
     <main>
-      <div class="menu">
-        <div class="menu-text">
+      <div class="menu wing">
+        <div class="menu-text wing-text">
           <h2>hi, nice to meet you.</h2>
           <p>What started out as a hobby of mine has turned into a full blown operation. My ice cream has been described as "hella good" and "some bomb ass ice cream". But don't take my word for it- come and try it for yourself.</p>
         </div>
-        <div class="menu-image">
+        <div class="menu-image wing-image">
           <img src="images/wing.png">
         </div>
       </div>
