--- a/src/meetwing.html
+++ b/src/meetwing.html
@@ -19,7 +19,7 @@
           <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)">What started out as a hobby of mine has turned into a full blown operation. My ice cream has been described as "hella good" and "some bomb ass ice cream". But don't take my word for it- come and try it for yourself.</p>
         </div>
         <div class="menu-image wing-image">
-          <img src="images/wing.png">
+          <img src="images/record.png">
         </div>
       </div>
       <div class="store">
