--- a/meetwing.html
+++ b/meetwing.html
@@ -16,7 +16,8 @@
       <div class="menu wing">
         <div class="menu-text wing-text">
           <h2 data-scroll="toggle(.fromBottomIn, .fromBottomOut)">hi, nice to meet you.</h2>
-          <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)">What started out as a hobby of mine has turned into a full blown operation. My ice cream has been described as "hella good" and "some bomb ass ice cream". But don't take my word for it- come and try it for yourself.</p>
+          <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)">I'm Miller Royer. What started out as a hobby of mine has turned into a full blown operation. I dropped out in my last semester of college to commit to making ice cream full time.</p><br>
+            <p data-scroll="toggle(.fromBottomIn, .fromBottomOut)">My ice cream has been described as "hella good" and "some bomb ass ice cream". But don't take my word for it- come and try it for yourself.</p>
         </div>
         <div class="menu-image wing-image">
           <img src="images/record.png">
