--- a/meetwing.html
+++ b/meetwing.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>+ WING ICE CREAM +</title>
+    <title>WING ICE CREAM</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="scrolltrigger.css" media="screen">
     <link rel="stylesheet" href="style.css">
