--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>+ WING ICE CREAM +</title>
+    <title>WING ICE CREAM</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="scrolltrigger.css" media="screen">
@@ -32,7 +32,41 @@
 
       <article id="meetwing">
         <a href="meetwing.html"><img src="images/wing1.jpg">
+
+          <?xml version="1.0" encoding="utf-8"?>
+          <!-- Generator: Adobe Illustrator 21.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
           <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          	 viewBox="0 0 178.7 99.3" style="enable-background:new 0 0 178.7 99.3;" xml:space="preserve">
+          <style type="text/css">
+          	.path{fill:none;stroke:#FF3FF8;stroke-width:2;stroke-miterlimit:10;}
+          </style>
+          <g>
+          	<path class="path" fill:"#FFFFFF" stroke:"#FF3FF8" stroke-width:"2" stroke-miterlimit:"10" d="M12.8,44.5c-1.1-4.6-1.8-5-5.9-4.4c-0.3,0.1-0.6-0.2-0.7-0.9c-0.2-1,0-1.2,3.1-2.4c5.1-1.9,9.2-5,9.7-5.2
+          		c0.2-0.1,0.8,0.1,0.9,0.5c0.8,3.4,0.4,4.4,2.9,14.6l2.6,10.7c3.3-3.8,6.7-6.7,11-7.8c5.1-1.2,9.8,1.4,11.1,7l4.3,17.8
+          		c0.6,2.6,2.3,2.3,2.7,2.2c2.6-0.5,3.7-0.5,3.9,0c0.3,1.3,0.4,1.6-0.9,1.9c-2.8,0.7-5.8,1.2-8.9,2c-3,0.7-5.9,1.6-8,2.1
+          		c-0.6,0.2-0.7-0.1-1-1.5c-0.1-0.6,0.2-0.9,2-1.4c0.4-0.1,2-0.6,1.4-3.2l-3.7-15.5c-0.5-2.2-2.7-6.1-7.4-5c-1.8,0.4-4.7,2.4-5.5,4.1
+          		c0,0.8,0.3,1.9,0.6,3l3.9,16.4c0.6,2.6,2.3,2.3,2.7,2.2c2.6-0.5,3-0.4,3.2,0.2c0.3,1.3,0.4,1.6-0.2,1.8c-2.8,0.7-5.8,1.2-8.9,2
+          		c-3,0.7-5.9,1.6-8.7,2.2c-0.6,0.2-0.7-0.1-1-1.5c-0.1-0.6,0.2-0.9,2.7-1.6c0.4-0.1,2-0.6,1.4-3.2L12.8,44.5z"/>
+          	<path class="path" fill:"#FFFFFF" stroke:"#FF3FF8" stroke-width:"2" stroke-miterlimit:"10" d="M66.4,56.7c0.1,0.9,0.2,1.3,0.2,1.6C68,64,72.8,69.9,81.1,68c7-1.7,7.2-6.8,8.1-7.1c0.6-0.2,1.5,0,1.7,0.7
+          		c0.2,1-1.2,10.2-12.6,13C64.8,77.8,59,67.6,57.7,62.1c-2.2-9.2,2.4-18.5,11.9-20.8c11.7-2.8,17.1,5.1,18,8.6
+          		c0.4,1.5,0.1,1.6-1.1,1.9L66.4,56.7z M71.6,52.7c5.5-1.3,6.1-1.9,5.6-4c-0.9-3.6-3.5-5.8-7.2-4.9c-4.1,1-4.9,6.4-4,10
+          		C67.9,53.6,69.7,53.2,71.6,52.7z"/>
+          	<path class="path" fill:"#FFFFFF" stroke:"#FF3FF8" stroke-width:"2" stroke-miterlimit:"10" d="M90.7,25.7c-1.1-4.6-1.8-5-5.9-4.4c-0.3,0.1-0.6-0.2-0.7-0.9c-0.2-1,0-1.2,3.1-2.4c5.1-1.9,9.2-5,9.7-5.2
+          		c0.2-0.1,0.8,0.1,0.9,0.5c0.8,3.4,0.4,4.4,2.9,14.6l7.9,32.8c0.6,2.6,2.3,2.3,2.7,2.2c2.6-0.5,3-0.4,3.2,0.2
+          		c0.3,1.3,0.4,1.6-0.2,1.8c-2.8,0.7-5.8,1.2-8.9,2c-3,0.7-5.9,1.6-8.7,2.2c-0.6,0.2-0.7-0.1-1-1.5c-0.1-0.6,0.2-0.9,2.7-1.6
+          		c0.3-0.1,2-0.6,1.4-3.2L90.7,25.7z"/>
+          	<path class="path" fill:"#FFFFFF" stroke:"#FF3FF8" stroke-width:"2" stroke-miterlimit:"10" d="M111.4,20.7c-1.1-4.6-1.8-5-5.9-4.4c-0.3,0.1-0.6-0.2-0.7-0.9c-0.2-1,0-1.2,3.1-2.4c5.1-1.9,9.2-5,9.7-5.2
+          		c0.2-0.1,0.8,0.1,0.9,0.5c0.8,3.4,0.4,4.4,2.9,14.6l7.9,32.8c0.6,2.6,2.3,2.3,2.7,2.2c2.6-0.5,3-0.4,3.2,0.2
+          		c0.3,1.3,0.4,1.6-0.2,1.8c-2.8,0.7-5.8,1.2-8.9,2c-3,0.7-5.9,1.6-8.7,2.2c-0.6,0.2-0.7-0.1-1-1.5c-0.1-0.6,0.2-0.9,2.7-1.6
+          		c0.3-0.1,2-0.6,1.4-3.2L111.4,20.7z"/>
+          	<path class="path" fill:"#FFFFFF" stroke:"#FF3FF8" stroke-width:"2" stroke-miterlimit:"10" d="M134.7,43.2c-3.1-12.9,7.7-19.5,14-21c6.4-1.5,19-0.6,22.1,12.3c3.1,13-7.7,19.5-14,21.1
+          		C150.4,57.2,137.8,56.2,134.7,43.2z M160.5,37c-1.5-6.2-4.2-13.9-11.1-12.3c-6.9,1.7-5.8,9.8-4.3,16.1c1.5,6.2,4.2,13.9,11.1,12.3
+          		C163.1,51.4,162,43.3,160.5,37z"/>
+          </g>
+          </svg>
+
+
+          <!-- <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
   	       viewBox="0 0 259 204" style="enable-background:new 0 0 259 204;" xml:space="preserve">
         <style type="text/css">
         	.st0{fill:#0000FF;}
@@ -55,7 +89,7 @@
         </g>
         <rect x="137.8" y="69.5" class="st1" width="137.4" height="52.7"/>
         <text transform="matrix(1 0 0 1 137.8473 100.6716)" class="st0 st2 st3">hi</text>
-        </svg>
+        </svg> -->
       </a>
       </article>
 
